--- a/Missions_to_Mars/mission_to_mars.ipynb
+++ b/Missions_to_Mars/mission_to_mars.ipynb
@@ -369,7 +369,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "browser.quit()\n"
+   ]
   }
  ],
  "metadata": {
@@ -377,7 +379,7 @@
    "hash": "6cb2121f089bf13d59aeeac1438c814554153e3abecc275cf2f92ff76a601a32"
   },
   "kernelspec": {
-   "display_name": "Python [conda env:PythonData] *",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
